# brest-mcp-server

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  gtfs-keys-summary.json  pyproject.toml
agent/: __main__.py  agent_executor.py  brestagent.py
brest-mcp/: README.md  client-anthropic.py  client-ollama.py  gtfs-validator.py  pyproject.toml  streamlit.py
brest-mcp/src/brest_mcp/: server-all.py  server-template.py  server.py
chat/: rxconfig.py
chat/chat/: chat.py
clients/: client.py  streamlit.py
mcp-gtfs/: README.md  pyproject.toml
mcp-gtfs/src/mcp_gtfs/: server-template.py
src/: server.py
tools/: client_langgraph.py
