[project]
name = "brest-mcp"
version = "0.1.0"
description = "A MCP server project that enables access to GTFS and GTFS-RT data feeds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.1",
    "mcp[cli]",
    "python-dotenv",
    "pydantic",
    "requests",
    "gtfs-realtime-bindings",
    "streamlit",
]
[[project.authors]]
name = "Artemis-IA"
email = "132653903+Artemis-IA@users.noreply.github.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
brest-mcp = "brest_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brest_mcp"]