[project]
name = "mcp-gtfs"
version = "0.1.0"
description = "A MCP server project tthat enable access to gtfs and gtfs-rt data feeds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.4.1",
    "mcp[cli]",
    "pydantic",
    "requests",
    "gtfs-realtime-bindings",
]
[[project.authors]]
name = "Artemis-IA"
email = "132653903+Artemis-IA@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-gtfs = "mcp_gtfs:main"
